# python-tkinter

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements-doc.txt
.github/: FUNDING.yml
.github/workflows/: pages.yml
_scripts/: build_docs.py  create_venv.py  export_requirements.py  install_requirements.py
docs/data/: CNAME
docs/source/: conf.py  contribute.rst  index.rst  tk-widgets.rst  ttk-widgets.rst
src/tk-widgets/button/: MainWindow.py
src/tk-widgets/color-chooser-ask-color/: MainWindow.py
src/tk-widgets/entry/: MainWindow.py
src/tk-widgets/file-dialog-ask-open-file/: MainWindow.py
src/tk-widgets/file-dialog-ask-open-files/: MainWindow.py
src/tk-widgets/file-dialog-ask-open-save-as-file/: MainWindow.py
src/tk-widgets/label/: MainWindow.py
src/tk-widgets/mainwindow/: MainWindow.py
src/tk-widgets/menu/: MainWindow.py
src/tk-widgets/message-box-ask-ok-cancel/: MainWindow.py
src/tk-widgets/message-box-ask-question/: MainWindow.py
src/tk-widgets/message-box-ask-retry-cancel/: MainWindow.py
src/tk-widgets/message-box-ask-yes-no/: MainWindow.py
src/tk-widgets/message-box-ask-yes-no-cancel/: MainWindow.py
src/tk-widgets/simple-dialog-ask-float/: MainWindow.py
src/tk-widgets/simple-dialog-ask-integer/: MainWindow.py
src/tk-widgets/simple-dialog-ask-string/: MainWindow.py
src/tk-widgets/thread/: MainWindow.py
