[tool.poetry]
name = "python-tkinter"
version = "0.1.0"
description = "Repositório criado para centralizar dicas, tutoriais e exemplos de código sobre a construção de interfaces gráficas com a linguagem de programação Python e a bliblioteca gráfica Tkinter."
authors = ["Renato Cruz <natorsc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-copybutton = "^0.5.2"
sphinx-inline-tabs = "^2023.4.21"
sphinx-intl = "^2.1.0"
sphinxext-opengraph = "^0.9.0"
sphinx-sitemap = "^2.5.1"
furo = "^2023.9.10"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
